# bitswell

./: .gitignore  .gitmodules  AGENT.json  AGENT.md  CLAUDE.md  MEMORY.md  PLAN.md  README.md  STATUS.md  TASK.md  startup.sh
.claude/: settings.json
.claude/agents/: bitswell.md  bitsweller.md  bitswelt.md  drift.md  glitch.md  moss.md  ratchet.md  sable.md  shuttle.md  thorn.md  vesper.md
.claude/memory/: MEMORY.md  feedback_agent_pwd.md  feedback_loom_protocol.md  feedback_mcagent_scope.md  feedback_orchestrator_identity.md  feedback_security_testing.md  feedback_testing_rust.md  feedback_use_loom_skill.md  feedback_workflow.md  feedback_worktree_cleanup.md  project_agent_pipeline.md  project_bitsweller_issues.md  project_identity_discovery.md  project_loom_disk_layout.md  project_mcagent_design.md  project_multi_repo.md  reference_github_ssh.md  user_willem.md
.github/workflows/: bitsweller-issue-to-pr.yml
agents/bitswell/: identity.md
loom/: README.md
memory/: README.md  identity.md  preferences.md  startup-questions.md  values.md
probe/: Cargo.toml
projects/: README.md  bitswell-core.yaml  ember.yaml
questions/: README.md  all-questions.md  favorites.md  seed-answers.md
scripts/: guard-primary-worktree.sh  pipeline-note-set.sh  project-spawn.sh  protect-branch.sh
tasks/: README.md
tests/: Cargo.toml  loom-v2-test-results.md
trivia-app/: game.js  index.html  questions.json  style.css
webhook/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
webhook/src/: events.rs  main.rs  signature.rs  trailers.rs  trigger.rs
(+118 files in other folders)
