[package]
name = "bitswell-webhook"
version = "0.1.0"
edition = "2024"
description = "GitHub webhook server for LOOM agent dispatch"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
regex = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
